--- a/JustGoTravel.MVC/Views/Shared/_Layout.cshtml
+++ b/JustGoTravel.MVC/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Vacation Package", "Index", "VacationPack")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <li>@Html.ActionLink("Agent", "Index", "Agent")</li>
+                    <li>@Html.ActionLink("Rate", "Index", "Rating")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
